# text_claffification

./: .gitignore  README.md  pyproject.toml
colab_notebooks/: japanese_text_classification.ipynb
src/: analyze_dataset.py  sample.py  train.py
