[tool.poetry]
name = "text-classification"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
datasets = "^2.19.1"
transformers = {extras = ["ja", "torch"], version = "^4.41.1"}
matplotlib = "^3.9.0"
pandas = "^2.2.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
